Add ESLint rules and create initial structure for project

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # npm install @react-navigation/bottom-tabs @react-navigation/native @react-navigation/native-stack @reduxjs/toolkit axios react react-native react-native-gesture-handler react-native-reanimated react-native-safe-area-context react-native-screens react-native-toast-message react-redux @tanstack/react-query
 
-# rules: {
-#     "semi": "off",
-#     "quotes": "off",
-#     "comma-dangle": "off",
-#     "no-unused-vars": "off",
-#     "no-trailing-spaces": "off",
-#     "no-multiple-empty-lines": "off",
-#     "eol-last": 0,
-#   },
+rules: {
+    "semi": "off",
+    "quotes": "off",
+    "comma-dangle": "off",
+    "no-unused-vars": "off",
+    "no-trailing-spaces": "off",
+    "no-multiple-empty-lines": "off",
+    "eol-last": 0,
+  },
