--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.75.0",
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-native": "^0.79.1",
     "react-native-date-picker": "^5.0.12",
@@ -45,7 +46,9 @@
     "@react-native/metro-config": "0.79.1",
     "@react-native/typescript-config": "0.79.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/react": "^19.1.3",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
