--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.14.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
