--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.75.0",
+    "@tanstack/react-query-devtools": "^5.77.0",
     "axios": "^1.9.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
@@ -56,7 +57,9 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-query-external-sync": "^2.0.1",
     "react-test-renderer": "19.0.0",
+    "socket.io-client": "^4.8.1",
     "typescript": "5.0.4"
   },
   "engines": {
