--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
+    "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
