feat: Implement Fetus and Blog features with API integration
- Added FetusInfoStatus component to display fetus details.
- Integrated Redux for state management and fetching fetus data from API.
- Created Blog feature with components for listing and displaying blog details.
- Implemented API calls for fetching parent relation and fetus data.
- Enhanced error handling and logging across components and API calls.
- Updated navigation stacks to include new Blog and Community features.
- Refactored existing components for better readability and maintainability.

--- a/ios/OhBau_App/Info.plist
+++ b/ios/OhBau_App/Info.plist
@@ -67,5 +67,16 @@
 		<string>LeagueSpartan-SemiBold.ttf</string>
 		<string>LeagueSpartan-Thin.ttf</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>ohbau</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>PaymentResult</string>
+		</dict>
+	</array>
 </dict>
 </plist>
