--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-entry": "^1.8.4",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "^3.17.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-sms-retriever": "^1.1.1",
@@ -36,6 +38,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
     "react-native-webview": "^13.13.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
