--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native": "^0.79.1",
     "react-native-date-picker": "^5.0.12",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-entry": "^1.8.4",
     "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
