--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "^0.79.1",
     "react-native-date-picker": "^5.0.12",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-otp-entry": "^1.8.4",
@@ -65,6 +66,7 @@
     "prettier": "2.8.8",
     "react-query-external-sync": "^2.0.1",
     "react-test-renderer": "19.0.0",
+    "reactotron-react-native": "^5.1.13",
     "socket.io-client": "^4.8.1",
     "typescript": "5.0.4"
   },
