feat: Enhance History Appointment Screen with feedback functionality and infinite scrolling
- Implemented infinite scrolling for booking history using `useInfiniteQuery`.
- Added feedback modal for users to rate and provide comments on their appointments.
- Filtered bookings to show only "Examined" and "Canceled" statuses.
- Improved UI with loading indicators and empty state handling.
- Refactored styles for better organization and readability.

feat: Update ViewChartScreen to support tablet layout

- Adjusted chart dimensions based on device type (tablet vs mobile).
- Removed unnecessary xAxisTextStyle property for cleaner code.

fix: Refactor createPaymentApi to return structured payment data

- Changed API response handling to return detailed payment information including checkout URL and QR code.
- Updated error handling for better clarity and debugging.

refactor: Remove unused getPaymentReturnApi function and related hooks

- Commented out unused code for processing payment returns to streamline the API module.

chore: Update payment response types for better clarity

- Modified CreatePaymentResponse interface to include detailed payment information.
- Added ReturnPaymentRequest interface for structured payment return requests.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,13 @@
 {
   "name": "OhBau_App",
-  "displayName": "OhBau_App"
+  "displayName": "OhBau_App",
+  "expo": {
+    "name": "OhBau_App",
+    "slug": "OhBau_App",
+    "platforms": ["ios", "android"],
+    "ios": {
+      "bundleIdentifier": "com.ohbau.app",
+      "supportsTablet": true
+    }
+  }
 }
