--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,11 +87,13 @@ android {
     }
 signingConfigs {
     release {
-        storeFile file('my-release-key.keystore')
-        storePassword '010823'
-        keyAlias 'my-key-alias'
-        keyPassword '010823'
-    }
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
     debug {
         storeFile file('debug.keystore')
         storePassword 'android'
